src/test/deca/syntax/valid/Objet/protected_field2.deca
// Description:
//    test de la sélection d'un attribut protégé dans une autre classe
//
// Resultats:
//   
//
// Historique:
//    cree le 19/01/2022

class A {
    protected int i ;
    
}
class B  {
    A a;
    int get(){
        return a.i ;
    }
}
{}



